--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,12 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "es5",
-        "noImplicitAny": false,
-        "outDir": "built",
-        "rootDir": ".",
-        "sourceMap": true
-    },
-    "exclude": [
-        "node_modules"
-    ],
-    "files": [
-        "app.ts",
-        "typings/tsd.d.ts"
-    ]
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "es5",
+    "noImplicitAny": false,
+    "outDir": "built",
+    "rootDir": ".",
+    "sourceMap": true
+  },
+  "exclude": ["node_modules"],
+  "files": ["app.ts", "typings/tsd.d.ts", "server.ts"]
 }
