--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.13.4",
-    "jquery": "^2.2.0",
     "morgan": "^1.6.1",
-    "ts-loader": "^0.8.1",
     "typescript": "^1.7.5",
     "webpack": "^1.12.13"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "css-loader": "^0.23.1",
+    "style-loader": "^0.13.0",
+    "ts-loader": "^0.8.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
