--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "express": "^4.13.4",
     "morgan": "^1.6.1",
     "typescript": "^1.7.5",
-    "webpack": "^1.12.13"
+    "webpack": "^1.12.13",
+    "webpack-dev-middleware": "^1.5.1",
+    "webpack-hot-middleware": "^2.7.1"
   },
   "devDependencies": {
     "css-loader": "^0.23.1",
