--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "dependencies": {
     "express": "^4.13.4",
     "morgan": "^1.6.1",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "redux": "^3.3.1",
     "typescript": "^1.7.5",
     "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.5.1",
