--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.13.4",
+    "mongoose": "^4.4.3",
     "morgan": "^1.6.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
