--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "redux": "^3.3.1",
+    "redux-logger": "^2.6.0",
+    "redux-thunk": "^1.0.3",
     "typescript": "^1.7.5",
     "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.5.1",
