--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "es6-promise": "^3.1.2",
     "express": "^4.13.4",
+    "isomorphic-fetch": "^2.2.1",
     "mongoose": "^4.4.3",
     "morgan": "^1.6.1",
+    "object-assign": "^4.0.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "redux": "^3.3.1",
